# OpenChatShop

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  alembic.ini  claude-progress.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  evaluator-rubric.md  feature_list.json  gunicorn.conf.py  init.sh  main.py  pyproject.toml  run.sh
.github/workflows/: ci.yml
.harness/: config.json
.harness/reference/: human-guide.md  index.md  method-map.md  planning-methodology.md  review-checklist.md  testing-strategy.md
.harness/scripts/: check-harness.sh  ci.sh  git-pre-commit.sh  hook-guard.sh  session-start.sh
.harness/templates/: autonomous-loop.md  history-template.md  init.sh  plan-template.md  self-eval-trigger.md
.harness/world/: events.jsonl
configs/: channels.yaml  providers.yaml  scenarios.yaml  security.yaml  tool_routing.yaml
data/seed/: mock_orders.json  mock_products.json
deploy/: docker-compose.nginx.yml  nginx.conf
docs/: audit-2026-06-04.md  code-health-audit-2026-06-03.md  production-hardening-audit.md  production-readiness-report.md  reaudit-2026-06-04.md  ux-review.md  方案书.md  架构升级方案书_V2.0.md
docs/design/: context-manager.md  contracts.md  conversation-ux.md  data-architecture.md  deployment.md  evaluation.md  intent-engine.md  provider-layer.md  security.md  tool-system.md
docs/iterations/: iteration-01-proposal.md  iteration-01-summary.md  iteration-02-proposal.md  iteration-02-summary.md  iteration-03-proposal.md  iteration-03-summary.md  iteration-04-proposal.md  iteration-04-summary.md
examples/: quick_start.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend-agent/: index.html  package-lock.json  package.json
frontend-agent/src/: App.tsx  index.css
frontend/src/: App.tsx  index.css
monitoring/: prometheus.yml
monitoring/prometheus/: alerts.yml
src/commerce_agent/: __init__.py
src/open_chat_shop/: __init__.py
static/: index.html
tests/: conftest.py
tests/e2e/: test_chat_flow.py
tests/integration/: test_db_orchestrator_seam.py  test_pipeline.py  test_reaudit_tests_eval.py
tests/load/: README.md  locustfile.py
tests/unit/: test_agent_api.py  test_agent_auth.py  (+91 more)
(+154 files in other folders)
