[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-chat-shop"
version = "0.1.0"
description = "Model-agnostic e-commerce intelligent dialogue system"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "OpenChatShop Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Office/Business",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "litellm>=1.40",
    "sqlmodel>=0.0.18",
    "pydantic>=2.7",
    "redis>=5.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24",
    "jsonschema>=4.21",
    "websockets>=12.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "anthropic>=0.30",
    "python-dotenv>=1.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]

[project.scripts]
openchatshop-eval = "open_chat_shop.evaluation.__main__:main"

[project.optional-dependencies]
pgvector = ["pgvector>=0.3"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    "faker>=25.0",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/open_chat_shop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["open_chat_shop"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
